--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,6 @@
-# Xcode
 .DS_Store
-build/
-project.xcworkspace/
-xcuserdata/
-DerivedData/
-.pbxuser
-!default.pbxuser
-.mode1v3
-!default.mode1v3
-.mode2v3
-!default.mode2v3
-.perspectivev3
-!default.perspectivev3
-.hmap
-
-# CodeBlocks
-bin/
-obj/
+bin
+obj
+.cbp
 .depend
 .layout
-# Visual Studio
-.sdf
-.opensdf
-.VC.db
-.suo
-.pdb
-.idb
-.ipch
-.obj
-.pch
-.dll
-.exe
-.user
-.aps
-.pch
-.vspscc
-_i.c
-_p.c
-.ncb
-.opendb
-.suo
-.sdf
-.cachefile
-.VC.VC.opendb
