Break struct.cpp into small.cpp. Fix some bugs
Fix creatSchoolYear, addSemester
Change struct Schoolyear (Description: make Semester into an array of 3 elements)
Break the Stuct.cpp into many small .cpp file to handle easier.
Change the global publishedScore into main so that change the parameters in function that using this variable

--- a/CS162Project/CS162Project.cbp
+++ b/CS162Project/CS162Project.cbp
@@ -32,8 +32,14 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Class.cpp" />
+		<Unit filename="Course.cpp" />
+		<Unit filename="Semester.cpp" />
+		<Unit filename="Staff.cpp" />
 		<Unit filename="Struct.cpp" />
 		<Unit filename="Struct.h" />
+		<Unit filename="Student.cpp" />
+		<Unit filename="User.cpp" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
